# Buddy

./: .gitignore  AGENTS.md  DEMO_DAY.md  DEMO_PLAN.md  HANDOFF.md  KNOWLEDGE.md  README.md  RESOURCES.md  SAFETY_TESTS.md  SLIDES.md  USE_CASES.md  buddy_electronics_shopping_list.docx  plan.md
3d_print_files/: BOM.md
apps/buddy/: README.md  pyproject.toml
apps/buddy/buddy/: __init__.py  ai.py  audio.py  config.py  main.py  motion.py  server.py  standalone.py  vision.py
apps/buddy/buddy/static/: index.html  main.js  style.css
apps/buddy/scripts/: check-audio.sh  post_wiring_setup.sh  sara-standalone.service  setup_pi.sh
scripts/: make_shopping_list.py
